--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
     <meta charset="utf8">
     <title>Bubble Shooter</title>
     <link href="_css/main.css" rel="stylesheet">
+    <script src="_js/modernizr.js"></script>
+    <script>
+    Modernizr.load({
+      load: "//ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.js",
+      complete: function () {
+        if(!window.jQuery){
+          Modernizr.load("_js/jquery-3.2.1.js");
+        }
+      }
+    });
+    </script>
   </head>
   <body>
     <div id="page">
